--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: netflix
-        image: karamfci/mh-repo:latest
+        image: karamfci/mh-repo:30
         ports:
         - containerPort: 80
       imagePullSecrets:
